# learn_slambook

./: .gitignore  README.md  zice_1.cpp  zice_2.cpp  zice_3.cpp  zice_4.cpp
ch3/: CMakeLists.txt
ch3/examples/: CMakeLists.txt  Draw.cpp  Draw.h  plotCamera.cpp  plotTrajectory.cpp
ch3/useEigen/testEigen/: CMakeLists.txt  main.cpp
ch3/visualizeGeometry/: CMakeLists.txt  visualizeGeometry.cpp
ch4/: CMakeLists.txt  testSophus.cpp  useSophus.cpp
ch4/example/: trajectoryError.cpp
ch5/imageBasics/: undistortImage.cpp
ch5/rgbd/: joinMap.cpp
ch5/stereo/: stereoVision.cpp
modern_cpp/ch2/: CMakeLists.txt  auto.cpp  constexpr.cpp  decltype.cpp  initializer_list.cpp  nullptr.cpp  template1.cpp  template2.cpp  template3.cpp  template4.cpp  tuple.cpp
pangolin_tutorial/slam_visualization/: custom_struct.h  main.cpp
pangolin_tutorial/task1/: main.cpp
pangolin_tutorial/task3/: main.cpp
pangolin_tutorial/task4/: main.cpp
pangolin_tutorial/task5/: main.cpp
pangolin_tutorial/task6/: main.cpp
